instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:4: error: not found: value avanace
avanace(4)
^